--- a/visualization/index.html
+++ b/visualization/index.html
@@ -17,10 +17,10 @@
         }
         #menu {
             position: absolute;
-            top: 0;
-            right: 0; 
-            background: #fff;
+            top: 10;
+            right: 10;
             padding: 10px;
+
         }
         .header {
             position: absolute;
@@ -38,6 +38,13 @@
             margin-left: auto;
             margin-right: auto; 
         }
+        .blur-box {
+            z-index: 1000;
+            border-radius: 10px;
+            padding: 10px;
+            -webkit-backdrop-filter: saturate(180%) blur(20px) brightness(150%);
+            backdrop-filter: blur(5px);
+        }
 
     </style>
 </head>
@@ -45,7 +52,7 @@
     <h1 class="header">Gentrification Prediction and Analysis</h1>
     <div id="map"></div>
 
-    <div id="menu">
+    <div id="menu" class="blur-box">
         <h3>Time Period</h3>
 
         <input id="2009-2018" type="radio" name="rtoggle" value="ckgo3bk222iew19quuk25vjwf" checked="checked"/>
@@ -61,6 +68,26 @@
         <label for="outdoors-v11">2019-2028</label>
     
     </div>
+
+    <div class="blur-box" style="position: absolute; left: 30px; top: 150px; width: 25%; min-width: 250px;">
+        <h3>Characteristics of gentrified tracts:</h3>
+        <ul>
+            <li>No major changes in population.</li>
+            <li>Household income rises steadily.</li>
+            <li>Home value rises significantly.</li>
+            <li>Tends to border tracts that have already gentrified.</li>
+        </ul>
+    </div>
+
+    <div class="blur-box" style="position: absolute; right: 40px; bottom: 100px; width: 40%; min-width: 250px;">
+        Red - Gentrified by the end of the speicifed time period; <br>
+        Green - Eligible to gentrification at the beginning of the time period.
+    </div>
+
+    <div class="blur-box" style="position: absolute; left: 70px; bottom: 150px; width: 20%; min-width: 250px;">
+        The shading shows the median home value, which rise with gentrification.
+    </div>
+
     <footer id="main-footer">
         2020 &copy MIT <a href="https://github.com/WeixuanZ/dataopen2020">W Zhang et al.</a>, submission for European Regional Data Open. Data from US Census Bureau, NYC Open Data.
     </footer>
